# dev_trooper

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt
app/: __init__.py  config.py  main.py  telegram_bot.py  telegram_bot_mock.py
app/agents/: __init__.py  manager.py  programmer.py
app/models/: __init__.py  schemas.py  state_store.py
app/services/: github_service.py  github_service_simple.py  llm_service.py  llm_service_mock.py  logging_service.py  patch_service.py  test_service.py
app/utils/: prompts.py
tests/: __init__.py  test_smoke.py  test_state_store.py
tests/fixtures/: __init__.py
tests/fixtures/sample_repo/: pyproject.toml
tests/fixtures/sample_repo/src/pkg/: __init__.py  app.py
tests/fixtures/sample_repo/tests/: test_app.py
